# flutter_llama

./: .gitattributes  .gitignore  .metadata  .pubignore  BRAINDLER_SETUP.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CHANGES_LAZY_LOADING.md  HUGGINGFACE_DOWNLOAD.md  LAZY_LOADING.md  Makefile  Modelfile  QUICK_DEMO.md  QUICK_START_LAZY_LOADING.md  README.md  README_RU.md  TODO.md  pubspec.yaml  run_demo.sh  upload_to_hf.py
.github/workflows/: tests.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  flutter_llama_bridge.cpp
example/: pubspec.yaml
example/integration_test/: model_loading_test.dart  ollama_integration_test.dart  streaming_generation_test.dart  text_generation_test.dart
example/lib/: main.dart  multimodal_demo.dart  multimodal_example.dart
example/lib/demo/: huggingface_download_demo.dart  test_generation_demo.dart
example/lib/screens/: model_manager_screen.dart  model_picker_screen.dart  model_test_screen.dart
example/lib/services/: model_downloader.dart
example/lib/utils/: model_downloader.dart
ios/: flutter_llama.podspec
ios/Classes/: FlutterLlamaPlugin.swift  llama_cpp_bridge.mm
lib/: flutter_llama.dart
lib/src/: flutter_llama.dart  flutter_llama_multimodal.dart
lib/src/models/: generation_params.dart  llama_config.dart  llama_response.dart  model_source.dart  multimodal_config.dart  multimodal_input.dart  multimodal_response.dart  preset_model.dart
lib/src/services/: huggingface_downloader.dart  model_manager.dart  ollama_downloader.dart
macos/: flutter_llama.podspec
macos/Classes/: FlutterLlamaPlugin.swift  flutter_llama_umbrella.h  llama_cpp_bridge.h  llama_cpp_bridge.mm  module.modulemap
macos/llama_build_macos/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  llama-config.cmake  llama-version.cmake  llama.pc
macos/llama_build_macos/autogenerated/: ggml-metal-embed.metal  ggml-metal-embed.metal.tmp  ggml-metal-embed.s
macos/llama_build_macos/common/: Makefile  build-info.cpp  cmake_install.cmake
macos/llama_build_macos/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/batched/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/convert-llama2c-to-ggml/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/diffusion/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/embedding/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/eval-callback/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/gen-docs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/gguf/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/gguf-hash/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/lookahead/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/lookup/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/model-conversion/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/parallel/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/passkey/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/retrieval/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/save-load-state/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/simple/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/simple-chat/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/speculative/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/speculative-simple/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/examples/training/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake
macos/llama_build_macos/ggml/src/: Makefile  cmake_install.cmake
macos/llama_build_macos/pocs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/pocs/vdot/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/src/: Makefile  cmake_install.cmake
macos/llama_build_macos/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/tools/batched-bench/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/tools/cvector-generator/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/tools/export-lora/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/tools/gguf-split/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/tools/imatrix/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/tools/llama-bench/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/tools/main/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/tools/mtmd/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/tools/perplexity/: CTestTestfile.cmake  Makefile  cmake_install.cmake
macos/llama_build_macos/tools/quantize/: CTestTestfile.cmake  Makefile  (+1 more)
mess/: BRAINDLER_SETUP.md  BUILD_INSTRUCTIONS.md  DEMO_EXAMPLES.md  DEVICES_SUPPORT.md  GPU_ACCELERATION_GUIDE.md  HARDWARE_ACCELERATION.md  INTEGRATION_GUIDE.md  LLAMA_CPP_INTEGRATION.md  QUICK_DEMO.md  QUICK_START.md  README_TESTING_SECTION.md  TESTING.md  TESTS_QUICKSTART.md  TODO.md
test/: README.md  flutter_llama_comprehensive_test.dart  flutter_llama_test.dart
test/models/: llama_config_test.dart
(+30 files in other folders)
